# ways-to-play

./: .eleventy.js  .eleventy.ts  .gitattributes  .gitignore  .gitmodules  .vnurc  .yarnrc.yml  200.html  404.html  README.md  TODO.md  about.md  asset-manifest.json  bibliography.json  bibliography.yaml  books_to_read.txt  build-posts.cabal  build.ps1  building-pdfs.md  chars.ts  chicago-author-date.csl  craco.config.js  games_to_examine.txt  generate_index.ps1  generate_maps.ps1  giscus.json  helpers.js  helpers.ts  helpers.tsx  images.js  images.ts  index.html  listreferences.ps1  make.ps1  metadata.yaml  package-lock.json  package.json  references-schema.ts  references.js  references.ts  (+10 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
11ty/: .eleventy.js  bibliography.json  helpers.js  images.js  package-lock.json  package.json  references.js  types.d.ts
about/: index.html
articles/: bibliography.md  index.html
bibliography/: index.html
css/: default.css  fonts.css  html.css
docs/: about.html  archive.html  bibliography.html  index.html
drawings/: cam.afdesign  camette.afdesign  chivalry.afdesign  four-handed-chivalry.afdesign  grand-cam.afdesign  grand-camelot.afdesign  halma.afdesign  large_merels.afdesign  large_merels_with_diagonals.afdesign  large_merels_with_diagonals_and_centre.afdesign  leap-frog-variation.afdesign  merel-cube1.afdesign  merel-hexagon.afdesign  merel-pentagon3.afdesign  mozog-published.afdesign  (+6 more)
footnote-asides/: LICENSE  README.md  footnote-asides.cabal  stack.yaml
footnote-asides/src/: Main.hs
(+1363 files in other folders)
