name:               build-posts
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , pandoc
                  , blaze-html
                  , filepath
                  , containers
                  , pandoc-citeproc
  ghc-options:      -threaded
  default-language: Haskell2010
