name:                footnote-asides
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Porges/footnote-asides#readme
license:             BSD3
license-file:        LICENSE
author:              George Pollard
maintainer:          porges@porg.es
copyright:           2019 George Pollard
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable footnote-asides
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, pandoc, pandoc-types, mtl
